# openzl-sys

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  bindings.rs  build.rs  static_fns_wrapper.c
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
tests/: zs2_struct.rs
